fixes on styles on dark mode and custom styles

--- a/src/styles/customizations/DegenApeAcademy.css
+++ b/src/styles/customizations/DegenApeAcademy.css
@@ -276,6 +276,8 @@
       background-color: black;
     }
 
+    .topicListRowAsMobileVotes,
+    .topicListRowAsMobileNumberOfReplies,
     .topicListAsMobileTitle,
     .topicListRowAsMobileBody,
     .topicListRowAsMobileBottomData,
