--- a/src/styles/customizations/Metaplex.css
+++ b/src/styles/customizations/Metaplex.css
@@ -224,6 +224,8 @@
       background-color: black;
     }
 
+    .topicListRowAsMobileVotes,
+    .topicListRowAsMobileNumberOfReplies,
     .topicListAsMobileTitle,
     .topicListRowAsMobileBody,
     .topicListRowAsMobileBottomData,
