--- a/src/styles/customizations/Solana.css
+++ b/src/styles/customizations/Solana.css
@@ -277,6 +277,8 @@
       background-color: black;
     }
 
+    .topicListRowAsMobileVotes,
+    .topicListRowAsMobileNumberOfReplies,
     .topicListAsMobileTitle,
     .topicListRowAsMobileBody,
     .topicListRowAsMobileBottomData,
