--- a/src/styles/themes/Dark.css
+++ b/src/styles/themes/Dark.css
@@ -339,6 +339,8 @@
       background-color: black;
     }
 
+    .topicListRowAsMobileVotes,
+    .topicListRowAsMobileNumberOfReplies,
     .topicListAsMobileTitle,
     .topicListRowAsMobileBody,
     .topicListRowAsMobileBottomData,
